bug: fixed nav styling a little, but need to fix button alignment to match with div

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,13 +49,14 @@
 }
 
 .navButton {
+  font-size: 1rem;
   margin: 1rem;
-  padding: 1.5rem;
+  padding: 1rem 2.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
+  border-radius: 2rem;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
 }
