--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: -100px;
     width: 100vw;
-    height: 100px;
+    height: 5.15rem;
     background-color: brown;
     display: flex;
     flex-direction: row;
